# ChangeLog for x11-misc/alacarte
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/alacarte/ChangeLog,v 1.83 2009/05/10 15:01:22 jer Exp $

  10 May 2009; Jeroen Roovers <jer@gentoo.org> alacarte-0.11.10.ebuild:
  Stable for HPPA (bug #266717).

  29 Apr 2009; Raúl Porcel <armin76@gentoo.org> alacarte-0.11.10.ebuild:
  alpha/ia64/sparc stable wrt #266717

  22 Apr 2009; Mart Raudsepp <leio@gentoo.org> alacarte-0.11.10.ebuild:
  QA: Don't neglect calling gnome2_src_prepare in src_prepare

  19 Apr 2009; Markus Meier <maekke@gentoo.org> alacarte-0.11.10:
  amd64/x86 stable, bug #266717

  19 Apr 2009; Brent Baude <ranger@gentoo.org> alacarte-0.11.10.ebuild:
  Marking alacarte-0.11.10 ppc64 and ppc for bug 266717

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  alacarte-0.11.8.ebuild:
  Stable on sparc, bug #260063

  21 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -alacarte-0.11.5.ebuild, -alacarte-0.11.7.ebuild, alacarte-0.11.9.ebuild,
  alacarte-0.11.10.ebuild:
  Drop libgnome-python dependency per bug #255963.

*alacarte-0.11.10 (19 Mar 2009)

  19 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +alacarte-0.11.10.ebuild:
  Bump to 0.11.10. Updated translations.

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> alacarte-0.11.8.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> alacarte-0.11.8.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> alacarte-0.11.8.ebuild:
  Marked stable on amd64

*alacarte-0.11.9 (08 Mar 2009)

  08 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +alacarte-0.11.9.ebuild:
  Bump to 0.11.9. Remove gnomeui dependency, translation updates.

  06 Mar 2009; Brent Baude <ranger@gentoo.org> alacarte-0.11.8.ebuild:
  Marking alacarte-0.11.8 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> alacarte-0.11.8.ebuild:
  Marking alacarte-0.11.8 ppc64 stable for bug 260063
