@@ -1,11 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX alacarte-0.11.5-python-2.6.patch 448 RMD160 db11ef6e261fa0b72af5eeb02a810834288898fb SHA1 e7c0dfed53e4ef4ce06342dea5c8b675b516a703 SHA256 ea7a0b5962de081766809268ce226bd6b606e15d76110b32157af6f3a0c1affa
 DIST alacarte-0.11.10.tar.bz2 179952 RMD160 c3498843f2d65bc8003880c7a32a5f08b8566ecd SHA1 7f559d3de4b4612125a1e92b54541ad3305f06f5 SHA256 3b405d3a5f59ff5dc90ade0be4f034a0fd66937994d3d7031a8ae33cd836d559
-DIST alacarte-0.11.6.tar.bz2 177406 RMD160 1a887c7e6f3ac2a61d32afc6adfa4be38c52a889 SHA1 8e570b952cba1b13cce0f8dc005036a48e8e96f8 SHA256 7ca56a9f9fc1e57354d4170349d23e4db57d351b17b91f5629e0709284b49aa3
-DIST alacarte-0.11.8.tar.bz2 178932 RMD160 9ade7947411d9e7067ecc2bc57ed92bf49df8327 SHA1 9b9ac9cf540bf9fe1df2f64e3416c424783430c4 SHA256 142432a81ba24c710ee2a2f38b4fd691e941eaa49c51e760adccccc02aa8a332
-DIST alacarte-0.11.9.tar.bz2 179155 RMD160 baae86b3a354915f6352df95fbc1eea26841455f SHA1 fcb00f5a341a8cebe6ad2584566ca38b488f4010 SHA256 01ff813180270204c380376dff5ba3eb341940d632857c7d55b47b977ca9d8a7
+DIST alacarte-0.12.1.tar.bz2 181165 RMD160 4fe59d1c6df2cdc8f22d901d9a3ce125bc9dc27d SHA1 7407dcb4cd000e0991b12c53113615771fc385a7 SHA256 1991b715431e792976644cc49c90b44dd010245b6c54312b67e0587bcb741d19
 EBUILD alacarte-0.11.10.ebuild 1191 RMD160 b41648ca3a976fad9054421958edda9129d8d36d SHA1 d534aea1b2ccf0dc107b0da928386d86947e78a5 SHA256 c86cc5ef381842f61b3e91612908c9e0faf9e371f9a26920991508ac866e13df
-EBUILD alacarte-0.11.6.ebuild 1353 RMD160 4f581523825660b989ce1f4343173541a8bcaa4a SHA1 f6fb2b308e41be2d50b509e31f7a99e35432631f SHA256 1d9daca75065ecf732758f33566895ea1aeb79f62dd7f136c976b6a392bcead1
-EBUILD alacarte-0.11.8.ebuild 1418 RMD160 55b72d50c5af6d4e220ccf8cd83575eb729086cf SHA1 184a68243c72ff062bcc9cb09deb0943b8647385 SHA256 c398dc6fc2bf143779122bfe02d9f19ec5d766e7b46d928e86dd473e9d80fd0a
-EBUILD alacarte-0.11.9.ebuild 1177 RMD160 d8fc53867efe0410df9a4b90d2a844c6b5aba122 SHA1 1c728021a384d3138d2e972763ccb1fb06b8c9e9 SHA256 7831c89b072fe89917642831388b1c6464b860b7a88deb4a8d82960f34eabdff
-MISC ChangeLog 10338 RMD160 567d36d32b529ba9a9046e301107776b6afbc89f SHA1 b1af76d56b30bd64d846df6b57bf20b6cce40d2c SHA256 07b90a1b7d816a63eabbf4dac41e3ebd177c542ef1e4e2f720c67cddba328fd8
+EBUILD alacarte-0.12.1.ebuild 1156 RMD160 f7ea0cc14a00fec8439f26548f4255493da5845e SHA1 7f453fd046f32a9494508c80fe93b0515747245a SHA256 c0cb1c9375c079d6441b6699ce07b1b8efe2de103c49133c582677d278c8bb61
+MISC ChangeLog 10567 RMD160 1ea79ffd0d739b2c868c89d58c3b7d9aee1769e1 SHA1 4837f73d566ba05a37fb4d119a8a4e3b37915e7d SHA256 de018d4a30dbb5b0c854ced4a82008197167c78865c3d1e0523436ff4e817532
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkoMpuoACgkQ1fmVwcYIWAYB2wCeJI/unJ/3V8vB8cdP7NOsX2ZJ
+gGUAn35hhGZxr7F6LcZR7+BH8yxN+TJz
+=cmAS
+-----END PGP SIGNATURE-----
