@@ -1,22 +1,24 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/alacarte/alacarte-0.11.8.ebuild,v 1.7 2009/04/12 21:01:29 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/alacarte/alacarte-0.12.1.ebuild,v 1.1 2009/05/14 23:19:01 eva Exp $
 
-inherit gnome2 python eutils
+EAPI="2"
+GCONF_DEBUG="no"
+
+inherit gnome2 python
 
 DESCRIPTION="Simple GNOME menu editor"
 HOMEPAGE="http://www.realistanew.com/projects/alacarte"
 
 LICENSE="GPL-2"
-KEYWORDS="alpha amd64 ~hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE=""
 SLOT=0
 
 common_depends=">=dev-lang/python-2.4
 	>=dev-python/pygobject-2.15.1
-	>=dev-python/pygtk-2.8
-	>=gnome-base/gnome-menus-2.22.2
-	>=dev-python/libgnome-python-2.18"
+	>=dev-python/pygtk-2.13
+	>=gnome-base/gnome-menus-2.22.2[python]"
 
 RDEPEND="${common_depends}
 	>=gnome-base/gnome-panel-2.16"
@@ -28,15 +30,8 @@ DEPEND="${common_depends}
 
 DOCS="AUTHORS ChangeLog NEWS README"
 
-pkg_setup() {
-	if ! built_with_use gnome-base/gnome-menus python ; then
-		eerror "You must emerge gnome-base/gnome-menus with the python USE flag"
-		die "alacarte needs python support in gnome-base/gnome-menus"
-	fi
-}
-
-src_unpack() {
-	gnome2_src_unpack
+src_prepare() {
+	gnome2_src_prepare
 
 	# disable pyc compiling
 	mv py-compile py-compile.orig
@@ -45,9 +40,8 @@ src_unpack() {
 
 pkg_postinst() {
 	gnome2_pkg_postinst
-	python_version
 	python_need_rebuild
-	python_mod_optimize /usr/$(get_libdir)/python${PYVER}/site-packages/Alacarte
+	python_mod_optimize $(python_get_sitedir)/Alacarte
 }
 
 pkg_postrm() {
