@@ -1,6 +1,13 @@
 # ChangeLog for x11-misc/alacarte
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/alacarte/ChangeLog,v 1.83 2009/05/10 15:01:22 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/alacarte/ChangeLog,v 1.84 2009/05/14 23:19:01 eva Exp $
+
+*alacarte-0.12.1 (14 May 2009)
+
+  14 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  -alacarte-0.11.6.ebuild, -alacarte-0.11.8.ebuild, -alacarte-0.11.9.ebuild,
+  +alacarte-0.12.1.ebuild:
+  Bump to 0.12.1. Clean up revisions.
 
   10 May 2009; Jeroen Roovers <jer@gentoo.org> alacarte-0.11.10.ebuild:
   Stable for HPPA (bug #266717).
